# sdlpre2-compat

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  NOTES.md  NOTES.txt  README.md  audit.c  dont_starve  event-converter.c  oldevents.h  problematic-syms-list.txt  sdldev.md  upstream.h
